fixed a new line split

--- a/frap.tex
+++ b/frap.tex
@@ -517,8 +517,7 @@ It's important to remember that plus \emph{inside} the brackets is syntax, while
 \newcommand{\subst}[3]{[#3/#2]#1}
 
 To test our semantics, we define a \emph{variable substitution} function\index{substitution}.
-A substitution $\subst{e}{x}{e'}$ stands for the result of running through the syntax of $e$, repla
-cing every occurrence of variable $x$ with expression $e'$.
+A substitution $\subst{e}{x}{e'}$ stands for the result of running through the syntax of $e$, replacing every occurrence of variable $x$ with expression $e'$.
 
 \begin{eqnarray*}
   \subst{n}{x}{e} &=& n \\
